# ReefPulse

./: .gitignore  README.md
backend/: .env.example  .sagemaker-ignore  README.md  pyproject.toml  requirements.txt  train_sagemaker_model_a.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/clients/: aws_clients.py  inaturalist_client.py
backend/app/core/: config.py  constants.py
backend/app/db/: models.py  seed.py  session.py  sqlite_fts.py  sqlite_migrate.py
backend/app/ml/: baselines.py  inference_router.py  model_registry.py
backend/app/pipelines/: feature_builder.py  ingest_mooring.py  ingest_scripps.py  process_mooring.py
backend/app/repositories/: challenges_repository.py  community_repository.py  user_challenge_repository.py
backend/app/schemas/: anomaly.py  auth.py  challenges.py  chat.py  common.py  community.py  forecast.py  fusion.py  safety.py  species.py
backend/app/services/: anomaly_service.py  auth_service.py  challenges_service.py  chat_service.py  community_media_service.py  community_service.py  forecast_service.py  fusion_service.py  safety_index_service.py  species_rank_service.py  species_service.py
backend/inaturalist_usa_fish/: __init__.py  cli.py  client.py  config.py  geo.py  lambda_handler.py  models.py  normalize.py
backend/notebooks/: model_b_eda.ipynb
backend/tests/: conftest.py  test_anomaly.py  test_auth.py  test_chat.py  test_client.py  test_community_challenges.py  test_forecast.py  test_geo.py  test_health.py  test_lambda_handler.py  test_mooring_pipeline.py  test_normalize.py  test_safety_fusion.py  test_species.py  test_species_rank.py
backend/training/model_b/: README.md  deploy_sagemaker.py  evaluation_report.ipynb  (+5 more)
(+217 files in other folders)
