[project]
name = "reefpulse-backend"
version = "0.1.0"
description = "Backend scaffold for the ReefPulse ocean intelligence platform"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.8.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]
training = [
  "matplotlib>=3.9.0",
  "notebook>=7.2.0",
  "sagemaker>=2.226.0",
  "seaborn>=0.13.2",
  "torch>=2.3.0",
]
model-a = [
  "torch>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
